# photon

./: .gitignore  AGENT.md  AUTH.md  BRAID.md  CHAIN.md  CLUTCH.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  NETWORK.md  PT.md  README.md  SPAGHETTIFY.md  TICKETS.md  android log.txt  build-android-adb.sh  build-android-dev.sh  build-android.sh  build-debug.ps1  build-debug.sh  build-development.sh  build-macos-local.sh  build-release.ps1  build-release.sh  build-sign-deploy.sh  build.rs  clutch.md  compact.md  deploy-android.sh  deploy-dev-linux.sh  deploy-dev-windows.sh  deploy.sh  example_raw.vsf  fractal decoder log.txt  install-android.sh  install-development.ps1  install-development.sh  install-release.sh  install.ps1  install.sh  (+4 more)
.cargo/: config.toml
android/: build.gradle  settings.gradle
android/app/: build.gradle  google-services.json
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/photon/messenger/: DeviceFingerprint.kt  PhotonActivity.kt  PhotonBeacon.kt  PhotonConnectionService.kt  PhotonHceService.kt  PhotonInstallReceiver.kt  PhotonLog.kt  PhotonMessagingService.kt  PhotonNfc.kt  PhotonSurfaceView.kt
android/app/src/main/res/values/: strings.xml  styles.xml
android/app/src/main/res/xml/: apduservice.xml  file_paths.xml
assets/: photon-orb.vsf
benches/: crypto_bench.rs
cross-libs/aarch64/: libX11.so.6.4.0  libXau.so.6.0.0  libXdmcp.so.6.0.0  libasound.so.2.0.0  libcap.so.2.76  libdbus-1.so.3.38.3  libgcc_s.so.1  libsystemd.so.0  libsystemd.so.0.41.0  libxcb.so.1.1.0
cross-libs/aarch64/pkgconfig/: alsa.pc  dbus-1.pc  x11.pc
docs/: TODO-later.md  android-session-persistence.md  background-tick.md  braid.md  chain-explicit-weave.md  clutch.md  contact-system.md  device-lifecycle.md  device-trust-and-recovery.md  disclosures.md  fleet-inbox.md  fleet-sync.md  fleet-vault-security.md  global-vault.md  identity-profile.md  keyring.md  lifecycle.md  network.md  pairing-v2.md  peers-are-fgtw.md  reachability-doorbell.md  rekey-threat-model.md  settings-panel.md  updates.md  vsf-trust-remediation.md
examples/: generate_test_key.rs  test_inline_vsf.rs  test_load_key.rs
firebase/functions/: index.js  package.json
installers/: install-development.ps1  install-development.sh  install-release.ps1  install-release.sh
macos/: Info.plist  photon_ble.m
scripts/: build-windows.sh  dev-windows.sh  dev.sh  release.sh
scripts/android/: build.sh  dev-adb.sh  dev-network.sh  install.sh  release-adb.sh  release-network.sh
scripts/lib/: android-env.sh  android.sh  desktop.sh  github.sh  keystore.sh  manifest.sh  publish.sh  sign.sh  snapbuild.sh  vsf-gate.sh  worktree-check.sh
scripts/publish/: dev-android.sh  dev-linux-arm64.sh  dev-linux.sh  dev-macos-arm64.sh  dev-macos-intel.sh  dev-windows.sh
src/: avatar.rs  display_profile.rs  jni_android.rs  lib.rs  main.rs  self_verify.rs
src/crypto/: blind.rs  chain.rs  clutch.rs  handle_proof.rs  keys.rs  mod.rs  self_verify.rs  shards.rs
src/network/: clock_check.rs  clutch_jobs.rs  doorbell.rs  handle_query.rs  history_pages.rs  http.rs  inspect.rs  mod.rs  pairing_beacon.rs  pairing_nfc.rs  peer_updates.rs  status.rs  tcp.rs  udp.rs  updates.rs
src/network/fgtw/: blob.rs  bootstrap.rs  fingerprint.rs  fleet.rs  identity.rs  keyring.rs  mod.rs  node.rs  peer_store.rs  protocol.rs  relay.rs  storage.rs  transport.rs
src/network/pltp/: buffer.rs  mod.rs  packets.rs  state.rs  transport.rs  window.rs
src/network/pt/: buffer.rs  mod.rs  packets.rs  state.rs  transport.rs  window.rs
src/network/traverse/: candidate.rs  gather.rs  mod.rs  punch.rs  reflexive.rs  session.rs
src/platform/: autostart.rs  control.rs  desktop_notify.rs  jni_android.rs  mod.rs  tray.rs
src/storage/: cloud.rs  contacts.rs  device_binding.rs  flat.rs  fleet_settings.rs  friendship.rs  mod.rs  settings.rs
src/types/: contact.rs  device.rs  friendship.rs  handle.rs  identity.rs  message.rs  mod.rs  peer.rs  seed.rs  shard.rs
src/ui/: app.rs  avatar.rs  avatar_render.rs  chromatic_wave.rs  colour.rs  colour_convert.rs  compositing.rs  display_profile.rs  drawing.rs  keyboard.rs  launch_layout.rs  layout.rs  lms2006so.rs  mod.rs  mouse.rs  photon_app.rs  photon_logo.rs  ready_layout.rs  renderer.rs  renderer_android.rs  renderer_linux.rs  renderer_linux_softbuffer.rs  renderer_linux_wgpu.rs  renderer_macos.rs  renderer_macos_softbuffer.rs  renderer_redox.rs  renderer_windows.rs  settings_layout.rs  settings_widgets.rs  state.rs  text.rs  text_editing.rs  text_rasterizing.rs  theme.rs
tests/: live_attest_smoke.rs  spaghetti_determinism.rs
tools/: hash-release.rs
