[package]
name = "photon-messenger"
version = "0.39.0"
edition = "2021"
authors = ["Nick Spiker <fractaldecoder@proton.me>"]
license = "MIT OR Apache-2.0"
description = "Decentralized messenger with rolling-chain encryption"
repository = "https://github.com/nickspiker/photon"
keywords = ["messenger", "encryption", "decentralized", "p2p", "privacy"]
categories = ["cryptography", "network-programming"]
exclude = [
    ".wrangler/",
    "*.txt",
    "node_modules/",
    "assets/Open_Sans/static/*Italic*",    # Italic variants not used
    "assets/Open_Sans/static/*Condensed*", # Condensed variants not used
    "android/",
    "target/",
]

[features]
default = ["logging"]  # Structured VSF logging is always-on; it's capped at 16 MiB and read live with `photonlog -f`
logging = []       # The VSF log sink (photon.log.vsf). Default-on; opt OUT for a truly silent build
debug-keys = []    # Enable Ctrl+D/H/T debug shortcuts
verbose-network = []  # Log every ping/pong/broadcast (noisy)
development = ["logging", "debug-keys", "fluor/amber"]  # All dev features + the amber theme (orange bg tint / hairline / title, so a dev build is never mistaken for release)

[lib]
# cdylib for Android JNI, rlib for desktop linking
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "photon-keygen"
path = "src/bin/photon-keygen.rs"

[[bin]]
name = "photon-signature-signer"
path = "src/bin/photon-signature-signer.rs"

[[bin]]
name = "test-device-key"
path = "src/bin/test-device-key.rs"

# Decoder for the structured VSF log (photon.log.vsf) — prints eagle-time + level + message per record.
[[bin]]
name = "photonlog"
path = "src/bin/photonlog.rs"

# Update-manifest writer (docs/updates.md) — deploy.sh + scripts/publish/dev-*.sh build/merge + sign the channel manifests with the release key.
[[bin]]
name = "photon-manifest"
path = "src/bin/photon-manifest.rs"

[build-dependencies]
# Compiles the macOS CoreBluetooth advertiser shim (macos/photon_ble.m) in build.rs; unused on other targets.
cc = "1"
# Stamps PHOTON_BUILD_STAMP (eagle-time oscillations at build) — the FLOOR of the update stamp window (docs/updates.md). Same crate as runtime so the two clocks can't drift.
vsf = { path = "../vsf" }

[dependencies]
ed25519-dalek = { version = "2", features = ["rand_core"] }

# Crypto
blake3 = "1.5"
chacha20poly1305 = "0.11.0-rc.2"
aes-gcm = "0.11.0-rc.2"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
rand = "0.8"
rand_core = "0.9.3"  # For FrodoKEM compatibility (separate from rand 0.8's rand_core 0.6)
rand_chacha = "0.3"  # ChaCha20Rng for PRNG salt generation
rand_pcg = "0.3"     # Pcg64 for dual PRNG diversity
zeroize = { version = "1.7", features = ["derive"] }
subtle = "2.6"  # Constant-time comparisons

# Post-quantum KEMs
frodo-kem-rs = "0.5.0"
pqcrypto-ntru = { version = "0.5.8", default-features = false }
pqcrypto-hqc = "0.2.2"
pqcrypto-traits = "0.3.5"
classic-mceliece-rust = { version = "3.1.0", features = ["mceliece460896"] }

# Classical curves (additional)
p384 = { version = "0.14.0-rc.1", features = ["ecdh"] }
p256 = { version = "0.14.0-rc.1", features = ["ecdh"] }
k256 = { version = "0.14.0-rc.1", features = ["ecdh"] }

# Post-quantum signatures
pqc_dilithium = "0.2.0"
falcon-rust = "0.1.2"

# Network
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.28.0", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }

# Utilities
thiserror = "2.0.17"
anyhow = "1.0"
log = "0.4"
hex = "0.4.3"
bincode = "2.0.1"
# winit specified per-platform below
pollster = "0.4.0"
cosmic-text = "0.14.2"
rayon = "1.11.0"
# softbuffer specified per-platform below
# arboard specified per-platform below (pulls x11rb on Linux)
vsf = { path = "../vsf", features = ["crypto", "inspect", "text-encode"] }
# FGTW client substrate — device keypair + fleet membership chain, shared with the calendar and the FGTW worker. Path dep during the migration; the client HTTP oracle / fan-out / fstate lift into it in later steps (see docs plan + fgtw/MIGRATION.md).
fgtw = { path = "../fgtw" }
# fluor: CPU softbuffer compositor. Hosts the desktop event loop, owns chrome / paint primitives / text rendering / widget dispatch.
# Path dep during the migration so Photon picks up local fluor changes without a republish cycle; flip to `version = "0.0.3+"` once the migration stabilizes (note: 0.0.2 was yanked).
# Global = algorithm/geometry core only (no windowing backend). The desktop target block below adds `host-winit` so Cargo unions to {std, text, simd, rayon, host-winit} for desktop builds; the Android target stays at the default set so its dep graph excludes softbuffer/arboard/winit. This is the first step of the `host-android` plan — Android stays on the legacy compositor for now, but the fluor algorithm code is shared by both targets going forward.
fluor = { path = "../fluor", default-features = false, features = ["std", "text", "simd", "rayon"] }
ihi = "0.0.48"
# Device identity + frozen v0 key derivation (was passless-key; dir + package renamed → tohu). Owns the per-platform device oracle (machine fingerprint / ANDROID_ID) and the handle→seed→vault derivation.
tohu = { path = "../tohu" }
# Storage/vault engine. Renamed custodes → manifestus (package + dir + `manifestus::` paths); the `custodes` name now belongs to the separate K-of-N social-recovery crate at ../custodes.
manifestus = { path = "../manifestus" }
# Encrypted keyed storage adapter (per-key ChaCha20-Poly1305 over a manifestus vault). Extracted from photon's old src/storage/flat.rs so idiosync and other stack apps share one storage layer; photon's FlatStorage/encrypt_bytes/etc. now re-export from here.
kete = { path = "../kete" }
# Conversation database over the kete vault — rows + catalog + content-addressed blobs. Messages (and later attachments/recordings) are stored here as rows in a byte-keyed table addressed by friendship_id, keyed by a monotonic per-message counter.
rarangi = { path = "../rarangi" }
voca = "0.0.0"
num-bigint = "0.4"
rav1e = { version = "0.7", default-features = false }
rav1d = { version = "1.1", default-features = false, features = ["bitdepth_8"] }
icc-profile = "0.0.2"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "tiff"] }
img-parts = "0.4"
chrono = "0.4.42"
reqwest = { version = "0.12.24", default-features = false, features = ["rustls-tls", "blocking"] }
dirs = "6.0.0"
curve25519-dalek = "4"
sha2 = "0.10.9"
sha3 = "0.11.0-rc.3"
i256 = "0.2.3"
chacha20 = { version = "0.9.1", features = ["std"] }
futures = "0.3.31"
resize = "0.8.8"
rgb = "0.8.52"
base64 = "0.22.1"
bitvec = "1.0.1"
libc = "0.2.178"
# thread-priority doesn't support Redox yet
[target.'cfg(not(target_os = "redox"))'.dependencies]
thread-priority = "1.2"
# Trustworthy wall-clock via multi-source network consensus. Used as a one-shot startup + on-jump sanity check on the system clock — never a data timestamp source (eagle-time stamps stay on the local monotonic clock); a large offset raises the amber "clock off" banner, never a silent correction. Required on every platform because the update stamp-window check uses nunc consensus as its `now` (docs/updates.md) — a system-clock fallback would hand back the freeze/poisoning attacks the consensus closes. Redox is excluded only because nunc's TLS stack rides rustls's `ring` backend and ring has no Redox target (eventual fix: pure-Rust CryptoProvider in nunc); ring cross-compiles to Android fine under the NDK env (android-env.sh already carries its clang symlinks) — the old desktop-only gating was untested caution.
nunc-time = { path = "../nunc" }

[target.'cfg(target_os = "macos")'.dependencies]
wgpu = { version = "28", default-features = false, features = ["metal", "wgsl"] }

[target.'cfg(target_os = "linux")'.dependencies]
x11 = { version = "2.21.0", features = ["xlib"] }
# Pairing v2 beacon scanner (BlueZ over D-Bus) — docs/pairing-v2.md. Rides the existing tokio runtime.
bluer = { version = "0.17", features = ["bluetoothd"] }

# Pairing v2 beacon SCANNER (sponsor / old-device role) via btleplug's cross-platform central (CoreBluetooth on macOS, WinRT on Windows) — docs/pairing-v2.md. btleplug is central-only, so ADVERTISING (new-device role) is wired per-OS natively (CoreBluetooth CBPeripheralManager / WinRT BluetoothLEAdvertisementPublisher).
[target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
btleplug = "0.11"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Graphics_Dwm",
    "Win32_Foundation",
    "Win32_UI_Controls",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_UI_ColorSystem",
    "Win32_System_Console",
    # Pairing v2 beacon ADVERTISER (new-device role) — WinRT BluetoothLEAdvertisementPublisher (docs/pairing-v2.md). Win32_System_Com for the CoInitializeEx apartment its activation thread needs; Storage_Streams for the DataWriter that fills the manufacturer-data buffer (Windows publishers may ONLY emit manufacturer data — service UUIDs are refused with 0x80070057).
    "Devices_Bluetooth_Advertisement",
    "Foundation_Collections",
    "Win32_System_Com",
    "Storage_Streams",
] }

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
ndk = { version = "0.9.0", features = ["api-level-26"] }
ndk-sys = "0.6.0"
# fluor's Android backend — ANativeWindow surface + JNI shims + Choreographer-driven render scheduling. Same `PhotonApp` FluorApp impl runs on Android (via AndroidShell) and desktop (via host-winit's DesktopShell). winit no longer appears in the Android dep graph — fluor's `WakeSender` trait abstracts cross-thread wake-up (which previously needed `winit::event_loop::EventLoopProxy<UserEvent>` in the trait signature), so the platform-data-types-only `winit` dep + the `android-activity` compile-glue dep + the `android_main` linker shim all retire.
fluor = { path = "../fluor", default-features = false, features = ["host-android"] }
# Per-contact notification chime, synthesis-only (no rodio/playback): Rust derives the sender's chirp
# WAV + haptic envelope and hands both to Kotlin, which plays them (MediaPlayer + VibrationEffect). The
# `playback` feature (rodio) stays off — it can't cross-compile to the NDK and the OS does the playing.
chirp = { path = "../chirp", default-features = false }

# Redox uses Orbital, not X11 — winit's Orbital backend + softbuffer both support Redox. fluor's `host-winit` feature now carries only winit + softbuffer (wgpu/arboard moved to per-target blocks that exclude Redox), so the same FluorApp host that runs on desktop compiles here too. No arboard (Redox has no clipboard backend); clipboard chords are cfg'd out in src/ui/keyboard.rs.
[target.'cfg(target_os = "redox")'.dependencies]
winit = { version = "0.30.12", default-features = false, features = ["rwh_06"] }
softbuffer = { version = "0.4", default-features = false }
fluor = { path = "../fluor", default-features = false, features = ["host-winit"] }

# Desktop platforms (not Redox, not Android): default winit/softbuffer + if-watch + arboard, plus fluor's `host-winit` feature (Cargo unions features across target blocks, so the global `default-features = false` set is augmented here rather than overridden).
[target.'cfg(not(any(target_os = "redox", target_os = "android")))'.dependencies]
winit = "0.30.12"
softbuffer = "0.4"
if-watch = { version = "3.2.1", features = ["tokio"] }
arboard = "3.4"
fluor = { path = "../fluor", default-features = false, features = ["host-winit"] }
# Per-contact notification chime: deterministic modal bell from spaghettify(their_handle_hash + our_identity_seed). Desktop-only - rodio's playback stack does not belong in the Android/Redox dep graphs (Android will use platform notifications).
chirp = { path = "../chirp" }

[dev-dependencies]
criterion = "0.7.0"

[[bench]]
name = "crypto_bench"
harness = false

[profile.dev]
opt-level = 2              # Good optimization, fast compile
overflow-checks = false    # No panic on overflow (wrapping behavior)
debug = false              # No debug info (faster builds, use profile.debuggable for F5)
debug-assertions = false   # No assertions
strip = true               # Also drop the symbol table — dev builds are debugged via the VSF log, not a backtrace; ~13-18% smaller uploads (Windows 53→43 MiB). Use profile.debuggable when you need symbols.
lto = false                # Fast linking
codegen-units = 16         # Parallel codegen (fast builds)
incremental = true         # Incremental compilation

# Custom profile for F5 debugging in VSCode (cargo build --profile debuggable)
[profile.debuggable]
inherits = "dev"
debug = "line-tables-only" # Line info for debugger
strip = "none"             # Keep symbols + the line tables above (dev's strip=true would otherwise erase them)


[patch.crates-io]
softbuffer = { git = "https://github.com/nickspiker/softbuffer", branch = "main" }

[profile.release]
lto = true                 # Full LTO for final builds
codegen-units = 1          # Single unit for max optimization
opt-level = 3              # Maximum optimization
strip = true               # Strip symbols
overflow-checks = false    # Wrapping behavior in release too
panic = "abort"            # No unwinding - smaller binary, crash on panic
